[workspace]
members = ["stag-api", "stag-cli", "stag-grpc", "stag-ui"]
resolver = "2"

[patch.crates-io]
tendermint = { path = "../tendermint-rs/tendermint" }
tendermint-light-client = { path = "../tendermint-rs/light-client" }
tendermint-rpc = { path = "../tendermint-rs/rpc" }
tendermint-proto = { path = "../tendermint-rs/proto" }
