[package]
name = "stag-api"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "ethermint",
    "indexed-db-storage",
    "mnemonic-signer",
    "reqwest-client",
    # "sqlite-storage",
    "tracing-event-handler",
]

# Enables feature indicators in documentation
doc = []

# Enables support for ethermint
ethermint = ["sha3"]

# Enables support for storage backend using Indexed DB on browser. Enables `wasm` feature automatically.
indexed-db-storage = ["rexie", "serde-wasm-bindgen", "wasm", "wasm-bindgen"]

# Enables support for transaction signing using Keplr wallet on browser (currently not working: https://github.com/chainapsis/keplr-wallet/issues/251)
# Enables `wasm` feature automatically.
keplr-signer = ["base64", "js-sys", "wasm", "web-sys"]

# Enables support for transaction signing using mnemonic phrase
mnemonic-signer = ["bip32"]

# Enables all the required dependencies for non-wasm environments
non-wasm = ["cosmos-sdk-proto/grpc-transport", "tonic/transport", "tonic-build/transport"]

# Enables support for HTTP client using `reqwest` crate
reqwest-client = ["reqwest"]

# Enables support for storage backend using SQLite. Enables `non-wasm` feature automatically.
sqlite-storage = ["non-wasm", "sqlx/sqlite"]

# Enables support for event logging using `tracing` crate
tracing-event-handler = ["tracing"]

# Enables all the required dependencies for wasm environments
wasm = ["getrandom", "tonic-web-wasm-client", "js-sys"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
base64 = { version = "0.13.0", optional = true }
bech32 = "0.9.0"
bip32 = { version = "0.4.0", features = ["bip39"], optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
cosmos-sdk-proto = { version = "0.12.2", default-features = false, features = ["grpc"] }
getrandom = { version = "0.2.6", default-features = false, features = [
    "js",
], optional = true }
hex = { version = "0.4.3", features = ["serde"] }
js-sys = { version = "0.3.57", optional = true }
k256 = { version = "0.11.2", features = ["keccak256"] }
num-rational = { version = "0.4.0", features = ["serde"] }
primitive-types = { version = "0.11.1", features = ["serde"] }
prost = "0.10.4"
prost-types = "0.10.1"
rand = "0.8.5"
regex = "1.5.6"
reqwest = { version = "0.11.10", optional = true }
rexie = { version = "0.4.1", default-features = false, optional = true }
ripemd = "0.1.1"
rust_decimal = "1.23.1"
sealed = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4.3", optional = true }
serde_json = "1.0.81"
sha2 = "0.10.2"
sha3 = { version = "0.10.1", optional = true }
sqlx = { version = "0.5.13", features = [
    "chrono",
    "json",
    "runtime-tokio-rustls",
], optional = true }
tendermint = "0.23.7"
tendermint-light-client = { version = "0.23.7", default-features = false }
tendermint-rpc = "0.23.7"
tokio = { version = "1.18.2", features = ["sync"] }
tonic = { version = "0.7.2", default-features = false, features = [
    "codegen",
    "prost",
] }
tonic-web-wasm-client = { version = "0.1.1", optional = true }
tracing = { version = "0.1.34", optional = true }
url = { version = "2.2.2", features = ["serde"] }
urlencoding = "2.1.0"
wasm-bindgen = { version = "0.2.80", optional = true }
web-sys = { version = "0.3.57", optional = true, features = ["Window"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
humantime = "2.1.0"
tokio = { version = "1.18.2", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3.30"

[build-dependencies]
tonic-build = { version = "0.7.2", default-features = false, features = [
    "prost",
] }
