[package]
name = "stag-api"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "API for IBC solo machine implementation"
homepage = "https://github.com/devashishdxt/stag"
repository = "https://github.com/devashishdxt/stag"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "ethermint",
    # "indexed-db-storage",
    "mnemonic-signer",
    # "postgres-storage",
    "reqwest-client",
    "sqlite-storage",
    "tracing-event-handler",
]

# Enables feature indicators in documentation
doc = []

# Enables support for ethermint
ethermint = ["sha3"]

# Enables support for storage backend using Indexed DB on browser. Enables `wasm` feature automatically.
indexed-db-storage = ["rexie", "serde-wasm-bindgen", "wasm", "wasm-bindgen"]

# Enables support for transaction signing using Keplr wallet on browser (currently not working: https://github.com/chainapsis/keplr-wallet/issues/251)
# Enables `wasm` feature automatically.
keplr-signer = ["js-sys", "wasm", "web-sys"]

# Enables support for transaction signing using mnemonic phrase
mnemonic-signer = ["bip32"]

# Enables all the required dependencies for non-wasm environments
non-wasm = [
    "cosmos-sdk-proto/grpc-transport",
    "tonic/transport",
    "tonic-build/transport",
]

# Enables support for storage backend using Postgres. Enables `non-wasm` feature automatically.
postgres-storage = ["non-wasm", "sqlx/postgres"]

# Enables support for HTTP client using `reqwest` crate
reqwest-client = ["reqwest"]

# Enables support for storage backend using SQLite. Enables `non-wasm` feature automatically.
sqlite-storage = ["non-wasm", "sqlx/sqlite"]

# Enables support for event logging using `tracing` crate
tracing-event-handler = ["tracing"]

# Enables all the required dependencies for wasm environments
wasm = ["getrandom", "js-sys", "tonic-web-wasm-client"]

[dependencies]
anyhow = "1.0.64"
async-trait = "0.1.57"
base64 = "0.13.0"
bech32 = "0.9.1"
bip32 = { version = "0.4.0", features = ["bip39"], optional = true }
cfg-if = "1.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
cosmos-sdk-proto = { version = "0.14.0", default-features = false, features = [
    "grpc",
] }
getrandom = { version = "0.2.7", default-features = false, features = [
    "js",
], optional = true }
hex = { version = "0.4.3", features = ["serde"] }
humantime-serde = "1.1.1"
js-sys = { version = "0.3.59", optional = true }
k256 = { version = "0.11.4", features = ["keccak256", "pem", "serde"] }
num-rational = { version = "0.4.1", features = ["serde"] }
primitive-types = { version = "0.11.1", features = ["serde"] }
prost = "0.11.0"
prost-types = "0.11.1"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", optional = true }
rexie = { version = "0.4.2", default-features = false, optional = true }
ripemd = "0.1.1"
rust_decimal = "1.26.1"
sealed = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4.3", optional = true }
serde_json = "1.0.85"
serde_str = "0.1.0"
sha2 = "0.10.5"
sha3 = { version = "0.10.4", optional = true }
sqlx = { version = "0.6.1", features = [
    "chrono",
    "json",
    "runtime-tokio-rustls",
], optional = true }
tendermint = "0.23.9"
tendermint-light-client = { version = "0.23.9", default-features = false }
tendermint-rpc = "0.23.9"
tokio = { version = "1.21.0", features = ["sync"] }
tonic = { version = "0.8.1", default-features = false, features = [
    "codegen",
    "prost",
] }
tonic-web-wasm-client = { version = "0.2.1", optional = true }
tracing = { version = "0.1.36", optional = true }
url = { version = "2.3.0", features = ["serde"] }
urlencoding = "2.1.2"
wasm-bindgen = { version = "0.2.82", optional = true }
web-sys = { version = "0.3.59", optional = true, features = ["Window"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
humantime = "2.1.0"
tokio = { version = "1.21.0", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3.32"

[build-dependencies]
tonic-build = { version = "0.8.0", default-features = false, features = [
    "prost",
] }
