[package]
name = "stag-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stag"
path = "src/main.rs"

[features]
default = ["ethermint", "sqlite-storage"]
ethermint = ["stag-api/ethermint"]
postgres-storage = ["stag-api/postgres-storage"]
sqlite-storage = ["stag-api/sqlite-storage"]

[dependencies]
anyhow = "1.0.62"
cfg-if = "1.0.0"
clap = { version = "3.2.17", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
stag-api = { version = "0.1.0", path = "../stag-api", default-features = false, features = [
    "mnemonic-signer",
    "reqwest-client",
    "tracing-event-handler",
] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "fs"] }
