[package]
name = "stag-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stag-grpc"
path = "./src/bin/stag_grpc.rs"

[features]
default = ["ethermint", "mnemonic-signer", "sqlite-storage"]
ethermint = ["stag-api/ethermint"]
mnemonic-signer = ["stag-api/mnemonic-signer"]
postgres-storage = ["stag-api/postgres-storage"]
sqlite-storage = ["stag-api/sqlite-storage"]

[dependencies]
anyhow = "1.0.62"
cfg-if = "1.0.0"
clap = { version = "3.2.17", features = ["derive"] }
hex = "0.4.3"
primitive-types = "0.11.1"
prost = "0.11.0"
prost-types = "0.11.1"
stag-api = { path = "../stag-api", default-features = false, features = [
    "reqwest-client",
    "tracing-event-handler",
] }
tokio = { version = "1.20.1", features = ["sync"] }
tonic = "0.8.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[build-dependencies]
cfg-if = "1.0.0"
tonic-build = "0.8.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["fs", "macros", "rt", "time"] }
