[package]
name = "stag-grpc"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "gRPC server for IBC solo machine implementation"
homepage = "https://github.com/devashishdxt/stag"
repository = "https://github.com/devashishdxt/stag"
edition = "2021"

[[bin]]
name = "stag-grpc"
path = "./src/bin/stag_grpc.rs"

[features]
default = ["ethermint", "mnemonic-signer", "solo-machine-v3", "sqlite-storage"]
ethermint = ["stag-api/ethermint"]
mnemonic-signer = ["stag-api/mnemonic-signer"]
postgres-storage = ["stag-api/postgres-storage"]
solo-machine-v3 = ["stag-api/solo-machine-v3"]
sqlite-storage = ["stag-api/sqlite-storage"]

[dependencies]
anyhow = "1.0.68"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
primitive-types = "0.12.1"
prost = "0.11.5"
prost-types = "0.11.5"
stag-api = { path = "../stag-api", default-features = false, features = [
    "reqwest-client",
    "tracing-event-handler",
] }
tokio = { version = "1.24.1", features = ["sync"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
cfg-if = "1.0.0"
tonic-build = "0.8.4"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["fs", "macros", "rt", "time"] }
