[package]
name = "stag-ui-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
getrandom = { version = "0.2.7", features = ["js"] }
gloo-console = "0.2.1"
rand = "0.8.5"
stag-api = { version = "0.1.0", path = "../stag-api" }
tracing = "0.1.35"
web-sys = "0.3.57"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"
