[package]
name = "stag-ui"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
hex = "0.4.3"
humantime = "2.1.0"
primitive-types = "0.11.1"
stag-api = { path = "../stag-api", default-features = false, features = [
    "indexed-db-storage",
    "mnemonic-signer",
    "reqwest-client",
    "tracing-event-handler",
] }
tracing = "0.1.34"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["HtmlInputElement"] }
yew = "0.19.3"
yew-router = "0.16.0"
