[package]
name = "stag-ui"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "IBC Solo Machine UI that interacts interface with other machines & replicated ledgers which speak IBC"
homepage = "https://github.com/devashishdxt/stag"
repository = "https://github.com/devashishdxt/stag"
categories = ["asynchronous", "ibc", "blockchain", "web-programming"]
keywords = ["ibc", "blockchain", "ibc-solo-machine", "yew"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
hex = "0.4.3"
humantime = "2.1.0"
primitive-types = "0.11.1"
serde_json = "1.0.81"
stag-api = { path = "../stag-api", default-features = false, features = [
  "indexed-db-storage",
  "mnemonic-signer",
  "reqwest-client",
  "tracing-event-handler",
] }
tracing = "0.1.35"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = ["HtmlInputElement"] }
yew = "0.19.3"
yew-router = "0.16.0"
