[package]
name = "stag-ui"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "UI for IBC solo machine implementation"
homepage = "https://github.com/devashishdxt/stag"
repository = "https://github.com/devashishdxt/stag"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["solo-machine-v3"]
solo-machine-v3 = ["stag-api/solo-machine-v3"]

[dependencies]
anyhow = "1.0.68"
hex = "0.4.3"
humantime = "2.1.0"
primitive-types = "0.12.1"
serde_json = "1.0.91"
stag-api = { path = "../stag-api", default-features = false, features = [
    "indexed-db-storage",
    "mnemonic-signer",
    "reqwest-client",
    "tracing-event-handler",
] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = "0.19.3"
yew-router = "0.16.0"
